Kubernetes_yaml_snippets/explore_kubernetes/exercises/bee-tolerance.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bee
  labels:
    name: bee
spec:
  tolerations:
  - key: spray
    value: mortein
    effect: NoSchedule
    operator: Equal
  containers:
  - name: bee
    image: nginx
