Kubernetes_yaml_snippets/explore_kubernetes/exercises/command-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-green
spec:
  containers:
  - name: webapp-green
    image: kodekloud/webapp-color
    command: ["--green", "green"]
