Kubernetes_yaml_snippets/explore_kubernetes/exercises/livenessprobe_webapp-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-2
  labels:
    name: simple-webapp-2
spec:
  containers:
  - name: simple-webapp-2
    image: kodekloud/webapp-delayed-start
    livenessProbe:
      httpGet:
        path: /live
        port: 8080
      periodSeconds: 1
      initialDelaySeconds: 80
