Kubernetes_yaml_snippets/explore_kubernetes/exercises/multi-container-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    name: busybox
spec:
  containers:
  - name: busybox1
    image: busybox
    args:
      - bin/sh
      - -c
      - ls; sleep 3600
  - name: busybox2  
    image: busybox
    args:
    - bin/sh
    - -c
    - echo Hello world; sleep 3600
  - name: busybox3
    image: busybox
    args:
    - bin/sh
    - -c
    - echo this is third container; sleep 3600
