Kubernetes_yaml_snippets/explore_kubernetes/exercises/pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod
  labels:
    name: myapp
spec:
  containers:
  - name: simple-webapp
    image: kodekloud/simple-webapp-mysql
