Kubernetes_yaml_snippets/explore_kubernetes/exercises/readinessprobe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-2
  labels:
    name: simple-webapp-2
spec:
  containers:
  - name: simple-webapp-2
    image: kodekloud/webapp-delayed-start
    readinessProbe:
        httpGet:
          path: /ready
          port: 8080
