Kubernetes_yaml_snippets/explore_kubernetes/exercises/redis-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-storage
  namespace: default
spec:
  restartPolicy: Never
  volumes:
  - name: vol-redis
    emptyDir: {}
        
  containers:
  - name: redis
    image: redis
    volumeMounts:
    - name: vol-redis
      mountPath: /data/redis
