Kubernetes_yaml_snippets/explore_kubernetes/exercises/rollingupdate-recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  strategy:
    name: 
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: kodekloud/webapp-color:v2
