Kubernetes_yaml_snippets/explore_kubernetes/exercises/sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: elastic-stack
  labels:
    name: app
spec:
  containers:
  - name: app
    image: kodekloud/event-simulator  
  - name: sidecar
    image: kodekloud/filebeat-configured
    volumeMounts:
    - mountPath: /var/log/event-simulator/
        name: log-volume
  volumes:
  - name: log-volume
    hostPath:
      path: /var/log/webapp
