Kubernetes_yaml_snippets/explore_kubernetes/exercises/taint-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mosquito
  labels:
    name: mosquito
spec:
  taint: 
    key: spray
    value: mortein
    effect: NoSchedule
  containers:
  - name: nginx
    image: nginx
