Kubernetes_yaml_snippets/explore_kubernetes/exercises/task-pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
  labels:
    name: task-pv-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
    volumeMounts:
      - mountPath: "/usr/share/nginx/html"
        name: claim
  volumes:
  - name: claim
    persistentVolumeClaim:
      claimName: task-pv-claim
