Kubernetes_yaml_snippets/explore_kubernetes/exercises/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
    spec:
      containers:
      - image: nginx:1.16.1
        name: nginx
        resources: {}
        ports:
          - containerPort: 80
        
status: {}
