Kubernetes_yaml_snippets/explore_kubernetes/exercises/internalnetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nternal-policy
  labels:
    name: nternal-policy
spec:
  podSelector:
    matchLabels:
      name: internal
    policyTypes:
    - Egress
    - Ingress
    ingress:
    - {}
    egress:
    - to:
      - podSelector:
          matchLabels:
            name: mysql
        ports:
        - protocol: TCP
          port: 3306
    - to:
